# FPGACosmacELF

./: .gitignore  README.md
GTKWave/: CDP1802.gtkw  core1802.gtkw  core1802_simple.gtkw
HDL/: fpga_rom.vhd
hdl/: SevenSegment.vhd
hdl/xilinx_uart/: UART6_RX.unconstrained.vhdl  UART6_RX.vhdl  UART6_TX.unconstrained.vhdl  UART6_TX.vhdl
src/main/scala/BlackBoxs/XlinxS6BB/: PLL_BB.scala  RAM_BB.scala  UART_X6.scala
src/main/scala/OtherComponents/: Debounce.scala  Keypad.scala  SevenSegment.scala
src/main/scala/Spinal1802/: CDP1802.scala  CDP1802_Emma_Verification.scala  CDP1802_OPCode_Verification.scala  CDP1861.scala  Debounce.scala  PLL_BB.scala  RAM_BB.scala  SevenSegment.scala  SevenSegment_BB.scala  TopLevel.scala  UART_X6.scala  cpu1802.scala  cpu1802_Testing_Sim.scala
src/main/scala/Spinal1861/: CDP1861.scala
src/main/scala/Systems/: TopLevel.scala
src/main/scala/my1802/: Debounce.scala  LedGlow.scala  PLL_BB.scala  RAM_BB.scala  ROM_BB.scala  Testing.scala  TopLevel.scala  UART_X6.scala  cpu1802.scala
src/testing/SDL_CosmacELF/: .gitignore  CMakeLists.txt  CosmacELF.cpp  Elements.cpp  Elements.h  README.md  cosmacELF
src/testing/SDL_CosmacELF/tests/: log.txt  test_FPM.asm  test_print.asm
verification/: log_fix.txt  test_FPM_Verification.asm
